...
                      if (largeText)
                        FilledButton.tonal(
                          onPressed: onLoad,
                          child: Text(
                            state.error == null
                                ? 'Choose a video'
                                : 'Choose another video',
                            textAlign: TextAlign.center,
                          ),
                        )
                      else
                        FilledButton.tonalIcon(
                          onPressed: onLoad,
...
